<resources>
    <string name="app_name" translatable="false">TheGolfClub</string>
    <string name="first_name">Enter Your First Name</string>
    <string name="last_name">Enter Your Last Name</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="login_here">Already Register | Log In Here</string>
    <string name="register">Register</string>
    <string name="title" translatable="false">My GolfClub</string>
    <string name="login">Login</string>
    <string name="log_in_here">Log In Here</string>
    <string name="register_here">Don\'t have an account? | Register Here</string>
    <string name="logout">Logout</string>
    <string name="golf_list">View golf clubs</string>
    <string name="successful_logout">Log Out Successfully</string>
    <string name="fill_all">Please fill all the fields</string>
    <string name="loading">Loading Data</string>
    <string name="successful">Welcome</string>
    <string name="clicked">clicked item : </string>
    <string name="confirm_password">confirm password</string>
    <string name="Password_not_match">Password not matching</string>
    <string name="password_length">The password should have 8 characters minimum</string>
    <string name="swahili" translatable="false">Switch to Swahili</string>
    <string name="my_image_description">Our services are Golf competions, lounge, Golf academy</string>


</resources>